# awesome_wotlk

./: .gitignore  .luacheckrc  BugFixes.cpp  BugFixes.h  D3D.cpp  Entry.cpp  Hooks.cpp  Inventory.h  Item.h  MSDF.cpp  MSDFManager.cpp  NamePlates.cpp  UnitAPI.cpp  UnitAPI.h  VoiceChat.cpp
.github/workflows/: lch.yml  windows-release.yml
addons/AwesomeCVar/: AwesomeCVar.toc  Constants.lua  Core.lua  UI.lua
addons/AwesomeCVar/Locales/: deDE.lua  enUS.lua  esMX.lua  frFR.lua  koKR.lua  ptBR.lua  ruRU.lua  zhCN.lua  zhTW.lua
addons/AwesomeCVar/Skins/: ElvUI.lua
docs/: api_reference.md  readme.md
src/AwesomeWotlkLib/: BugFixes.cpp  BugFixes.h  CMakeLists.txt  Camera.cpp  Camera.h  CombatLog.cpp  CombatLog.h  CommandLine.cpp  CommandLine.h  D3D.cpp  D3D.h  Entry.cpp  Enums.h  Fonts.cpp  GameClient.h  Hooks.cpp  Hooks.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Lua.h  MSDF.cpp  MSDF.h  MSDFCache.cpp  MSDFCache.h  MSDFFont.cpp  MSDFFont.h  MSDFManager.cpp  MSDFManager.h  MSDFPregen.cpp  MSDFPregen.h  MSDFShaders.h  MSDFTypes.h  MSDFUtils.h  MSDFValidator.h  Misc.cpp  Misc.h  NamePlates.cpp  NamePlates.h  (+11 more)
src/AwesomeWotlkPatch/: Main.cpp  Patch.h  Utils.h
